# kpack

./: .build.yml  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  generate_version.bat  generate_version.sh  kpack.1.scdoc  kpack.1.txt  kpack.5.scdoc  kpack.5.txt  kpkg.1.txt  main.c  module.js  package.config  pkgconfig.ini  test.pkg
doc/: package_format
knightos/: Makefile  kpm.asm
src/: checksums.c  checksums.h  common.h  main.c  packager.c  packager.h  unpack.c  unpack.h  version.h  version.h.in
